[package]
name = "near-sandbox-utils"
version = "0.6.2"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/sandbox"
description = """
Utility library for launching NEAR sandbox environments.
"""

[dependencies]
anyhow = "1"
async-process = "1.7.0"
binary-install = "0.2.0"
chrono = "0.4"
fs2 = "0.4"
hex = "0.4"
home = "0.5.5"

[features]
global_install = []
