[package]
name = "near-sandbox-utils"
version = "0.15.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/sandbox"
description = """
Utility library for launching NEAR sandbox environments.
"""

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["process", "net"] }
binary-install = "0.2.0"
fs2 = "0.4"
home = "0.5.5"

tempfile = "3.19"
json-patch = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
reqwest = "0.12.20"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
near-api = "0.6"

[features]
global_install = []
